test_regress/t/t_mem_packed_bad.out
%Error: t/t_mem_packed_bad.v:26:13: CONST '28'h0' unexpected in assignment to unpacked array
   26 |     ch04 <= 56'd0;
      |             ^~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
